--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -16,6 +16,7 @@
           <li><a href="../ku-with-slideshow/">Template with slideshow</a></li>
           <li><a href="../ku-with-slidegallery/">Template with slide gallery</a></li>
           <li><a href="../ku-gridboxes/">Template with grid boxes</a></li>
+          <li><a href="../ku-newsboxes/">Template with news boxes</a></li>
           <li><a href="../ku-datatables/">Template with data tables</a></li>
           <li><a href="../ku-formvalidation/">Template with form validation</a></li>
           <li><a href="../non-responsive/">Non responsive page</a></li>
