--- a/less/variables.less
+++ b/less/variables.less
@@ -65,7 +65,7 @@
 @green: #85ae33;
 @green-hover: #75992c;
 @ku-gray: #eee;
-@ku-gray-hover: @gray-f5;
+@ku-gray-hover: #e7e7e7;
 @ku-darkgray: #b5b5b5;
 @ku-darkgray-hover: #a1a1a1;
 @ku-darkblue: #42759b;
