Front page styling

--- a/less/mixins/ku-gridbox-mixins.less
+++ b/less/mixins/ku-gridbox-mixins.less
@@ -68,21 +68,18 @@
 
         &.subcolor_5 {
           .header {
-            background: fade(@ku-gray, 90%);
             color: @ku-gridbox-text;
           }
         }
 
         &.subcolor_6 {
           .header {
-            background: fade(@white-color, 90%);
             color: @ku-gridbox-text;
           }
         }
 
         &.subcolor_7 {
           .header {
-            background: fade(@brown, 83%);
             color: @white-color;
           }
         }
@@ -128,7 +125,7 @@
   &.size3 {
     &.with-img {
       flex-direction: row;
-      //color: @white-color;
+
       .box1 {
         flex: 1;
         order: 2;
@@ -158,7 +155,7 @@
 
       &:hover {
         .header {
-          background-color: transparent!important;
+          background: 0!important;
         }
       }
     }
