--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -27,6 +27,8 @@
   }
 
   &.subcolor_5 {
+    background: @ku-gray;
+
     &.text-down {
       .header {
         background: fade(@ku-gray, 90%);
@@ -40,7 +42,7 @@
     }
 
     &.outlined {
-      border: 1px solid @ku-gray;
+      border: 1px solid @gray-dark;
       color: @ku-gridbox-text;
 
       &::before {
@@ -60,7 +62,6 @@
     }
 
     &.full {
-      background: @ku-gray;
       color: @ku-gridbox-text;
 
       &:hover {
@@ -88,6 +89,7 @@
   }
 
   &.subcolor_6 {
+    background: @white-color;
     .header {
       background: fade(@white-color, 90%);
       color: @ku-gridbox-text;
@@ -135,6 +137,10 @@
     &.text-down {
       &:hover {
         background: @white-color-hover;
+      }
+
+      &:not(.with-img) {
+        border: 1px solid @gray-dark;
       }
     }
 
@@ -213,7 +219,7 @@
       color: inherit;
       font-size: 13.2px;
       text-transform: uppercase;
-      padding: 8px 18px 6px @padding10;
+      padding: 8px 18px 6px 10px;
       font-weight: 700;
       letter-spacing: 0.4px;
     }
@@ -235,8 +241,7 @@
     content: "\61";
     text-transform: none;
     font-size: 12px;
-    //color: @white-color;
-    bottom: 8px;
+    bottom: 9px;
     right: @margin10;
     position: absolute;
     z-index: 5;
@@ -582,7 +587,7 @@
 }
 @media (min-width: @screen-xs-min) and (max-width: @screen-sm-max) {
   // Tablet
-  .gcrow .gccolumn .gridbox {
+.gcrow .gccolumn .gridbox {
     .img-text-aligned();
 
     &.outlined {
@@ -617,12 +622,38 @@
       width: 100%;
     }
   }
+
+// Full-width page only:
+  // .FullWidthFrontpage {
+  //   .two-one-one-column .column2,
+  //   .two-one-one-column .column3,
+  //   .one-one-two-column .column1,
+  //   .one-one-two-column .column2,
+  //   .double-column [class*=column],
+  //   .quad-column [class*=column],
+  //   .one-three-column .column1,
+  //   .three-one-column .column2 {
+  //     .gridbox {
+  //       flex-direction: column;
+  //       .box1 {
+  //             flex: 0 1 auto;
+  //             order: 1;
+  //       }
+  //       .box2 {
+  //             flex: 1 1 auto;
+  //             order: 2;
+  //       }
+  //     }
+  //   }
+  // }
 }
 @media (min-width: @screen-md-min) {
   // Desktop text-down with img style for multiple column spans
-  .one-one-two-column .column2,
+  .one-one-two-column .column3,
+  .one-three-column .column2,
   .one-two-column .column2,
   .single-column .column1,
+  .three-one-column .column1,
   .two-one-column .column1,
   .two-one-one-column .column1 {
     .gridbox {
@@ -650,7 +681,7 @@
       }
     }
   }
-  // Display text for full width .size1 boxes
+  // Styling for full width .size1 boxes
   .single-column .column1 {
     .size1 {
       flex-direction: row;
