--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -27,7 +27,7 @@
 
 #mobileleftmenu {
   background-color: @white-color;
-  color: @gray-base;
+  color: @text-color;
 
   .local1_mmenu,
   .local2_mmenu {
@@ -100,36 +100,36 @@
     background-color: @ku-red;
     color: @white-color;
     font-size: larger;
-    border-bottom: solid 1px lighten(@ku-red, 30%);
+    border-bottom: solid 1px lighten(@ku-red, 7%);
 
     .theme-samf & {
       background-color: @samf;
-      border-bottom: 1px solid lighten(@samf, 30%);
+      border-bottom: 1px solid lighten(@samf, 7%);
     }
 
     .theme-hum & {
       background-color: @hum;
-      border-bottom: 1px solid lighten(@hum, 30%);
+      border-bottom: 1px solid lighten(@hum, 7%);
     }
 
     .theme-science & {
       background-color: @science;
-      border-bottom: 1px solid lighten(@science, 30%);
+      border-bottom: 1px solid lighten(@science, 7%);
     }
 
     .theme-sund & {
       background-color: @sund;
-      border-bottom: 1px solid lighten(@sund, 30%);
+      border-bottom: 1px solid lighten(@sund, 7%);
     }
 
     .theme-jur & {
       background-color: @jura;
-      border-bottom: 1px solid lighten(@jura, 30%);
+      border-bottom: 1px solid lighten(@jura, 7%);
     }
 
     .theme-teo & {
       background-color: @teol;
-      border-bottom: 1px solid lighten(@teol, 30%);
+      border-bottom: 1px solid lighten(@teol, 7%);
     }
   }
 
