--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -127,8 +127,7 @@
     }
   }
 
-  .mm-menu .mm-listview > li.mm-selected > a:not(.mm-next),
-  .mm-menu .mm-listview > li.mm-selected > span {
+  .mm-menu .mm-listview > li.mm-selected > a:not(.mm-next) {
     background: darken(@ku-red, 3%);
 
     .theme-samf & {
