--- a/less/mixins/ku-background-color-with-fallback.less
+++ b/less/mixins/ku-background-color-with-fallback.less
@@ -1,4 +1,4 @@
-// Create background colors with transoparency and fallback
+// Create background colors with transoparency (rgba) and fallback
 
 .backgroundColorFix(@theColor, @theAlpha) {
   background: (@theColor);
