Converted to rgba

--- a/less/mixins/ku-background-color-with-fallback.less
+++ b/less/mixins/ku-background-color-with-fallback.less
@@ -1,6 +1,6 @@
 // Create background colors with transoparency (rgba) and fallback
 
-.backgroundColorFix(@theColor, @theAlpha) {
-  background: (@theColor);
-  background: rgba(red(@theColor), green(@theColor), blue(@theColor), @theAlpha);
+.backgroundColorFix(@color, @opacity) {
+   @rgba-color: rgba(red(@color), green(@color), blue(@color), @opacity);
+   background: fade(@rgba-color, 0);
 }
