--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -9,7 +9,7 @@
     z-index: @zindex-navbar-fixed !important;
     padding: @padding20;
     color: @white-color;
-    .backgroundColorFix(lighten(@gray-light, 18%), .9);
+    background: fade(lighten(@gray-light, 18%), 90%);
 
     .h2 {
       font-weight: 700;
