--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -63,7 +63,7 @@
       border-color: @white-color;
     }
 
-    &.mm-selected.mm-opened > a:not(.mm-next) {
+    &.mm-selected > a:not(.mm-next) {
       // selected view
       font-weight: 600;
       background: darken(@ku-red, 3%);
