--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -16,6 +16,7 @@
   }
 }
 /* KU theme colors for jQuery MMenu */
+
 #mobileleftmenu {
   background-color: @white-color;
   color: @text-color;
@@ -62,6 +63,10 @@
       .mm-next::after {
         // Arrows
         border-color: @white-color;
+      }
+
+      &:last-child {
+        border-top: 0;
       }
     }
 
