--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -16,6 +16,7 @@
   }
 }
 /* KU theme colors for jQuery MMenu */
+
 #mobileleftmenu {
   background-color: @white-color;
   color: @text-color;
@@ -91,10 +92,7 @@
         background: darken(@teol, 6%);
       }
     }
-  }
 
-  .local1_mmenu,
-  .local2_mmenu {
     > .mm-panel {
       background-color: lighten(@gray-light, 40%);
       color: @gray-dark;
@@ -104,8 +102,22 @@
       border: none;
     }
   }
-
+  // .local1_mmenu,
+  // .local2_mmenu {
+  //   > .mm-panel {
+  //     background-color: lighten(@gray-light, 40%);
+  //     color: @gray-dark;
+  //   }
+  //
+  //   &::after {
+  //     border: none;
+  //   }
+  // }
   .local1_mmenu {
+    &:first-of-type {
+      border-top: 0;
+    }
+
     &.mm-opened {
       .mm-listview {
         .mm-next {
