--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -100,6 +100,10 @@
     &::after {
       border: none;
     }
+    .mm-opened.mm-selected {
+      border-left: 2px solid @gray-666;
+      margin-left: 2px;
+    }
   }
 
   .local1_mmenu {
