--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -16,6 +16,7 @@
   }
 }
 /* KU theme colors for jQuery MMenu */
+
 #mobileleftmenu {
   background-color: @white-color;
   color: @text-color;
@@ -100,10 +101,10 @@
     &::after {
       border: none;
     }
-    .mm-opened {
 
+    .mm-opened {
       // Seklected border
-      > .mm-opened.mm-selected {
+      .mm-opened.mm-selected {
         border-left: 2px solid @gray-666;
         margin-left: 2px;
       }
