--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -101,7 +101,7 @@
       border: none;
     }
 
-    .mm-opened {
+    &.mm-opened {
       > .mm-panel {
         .mm-opened.mm-selected {
           a:not(.mm-next) {
